--- a/custom_components/dyson_cloud/manifest.json
+++ b/custom_components/dyson_cloud/manifest.json
@@ -2,10 +2,10 @@
     "domain": "dyson_cloud",
     "name": "Dyson Cloud",
     "config_flow": true,
-    "documentation": "https://github.com/shenxn/ha-dyson",
+    "documentation": "https://github.com/kodek/ha-dyson",
     "issue_tracker": "https://github.com/shenxn/ha-dyson/issues",
     "dependencies": [],
-    "codeowners": ["@shenxn"],
-    "requirements": ["libdyson==0.8.7"],
-    "version": "0.15.0"
+    "codeowners": ["@kodek"],
+    "requirements": ["libdyson==0.8.11"],
+    "version": "0.15.0a"
 }
